--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -36,7 +36,7 @@ header {
     background: #707070;
     margin: 0 -9999px;
     padding: 0 9999px;
-    border-bottom: solid 5px $grey-darkest;
+    border-bottom: solid 5px #000000;
 }
 .sidebar {
     float: left;
